13. Add simple NgRx spinner

--- a/src/app/event/containers/event/event.component.html
+++ b/src/app/event/containers/event/event.component.html
@@ -1,2 +1,3 @@
 <app-add-attendee (addAttendee)="addAttendee($event)"></app-add-attendee>
-<app-event-list [attendees]="attendees$ | async"></app-event-list>
+<app-event-list *ngIf="!(spinner$ | async)" [attendees]="attendees$ | async"></app-event-list>
+<div *ngIf="spinner$ | async">loading..</div>
