--- a/src/app/event/containers/event/event.component.html
+++ b/src/app/event/containers/event/event.component.html
@@ -1,3 +1,7 @@
 <app-add-attendee (addAttendee)="addAttendee($event)"></app-add-attendee>
+<select name="Guests filter" (change)="navigate($event.target.value)">
+  <option [value]="'all'">All</option>
+  <option [value]="'withGuests'">With Guests</option>
+  <option [value]="'withoutGuests'">Without Guests</option>
+</select>
 <app-event-list *ngIf="!(spinner$ | async)" [attendees]="attendees$ | async"></app-event-list>
-<div *ngIf="spinner$ | async">loading..</div>
